[gd_scene load_steps=7 format=1]

[ext_resource path="res://scripts/enemy.gd" type="Script" id=1]
[ext_resource path="res://sprites/enemy.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 16.3137
height = 18.8627

[sub_resource type="Animation" id=2]

resource/name = "Death"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:transform/rot")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=3]

length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=4]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 0
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": FloatArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 64, 64 ), Rect2( 64, 0, 64, 64 ), Rect2( 128, 0, 64, 64 ), Rect2( 192, 0, 64, 64 ), Rect2( 256, 0, 64, 64 ) ]
}

[node name="enemy" type="KinematicBody2D" groups=[
"destructable_by_bullet",
]]

transform/pos = Vector2( 50, 50 )
transform/scale = Vector2( 1.5625, 1.5625 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( -3.95412e-08, -0.904598, 1.11323, -4.8661e-08, -1.78814e-07, 1.47115 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )
region = true
region_rect = Rect2( 64, 0, 64, 64 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Death = SubResource( 2 )
anims/Jump = SubResource( 3 )
anims/Walking = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "Walking"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( -1.78814e-07, 1.47115 )
transform/rot = 90.0
transform/scale = Vector2( 0.904598, 1.11323 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="LeftGroundDetector" type="RayCast2D" parent="."]

transform/pos = Vector2( -32, 0 )
enabled = true
cast_to = Vector2( 0, 25 )
layer_mask = 1
type_mask = 15

[node name="RightGroundDetector" type="RayCast2D" parent="."]

transform/pos = Vector2( 32, 0 )
enabled = true
cast_to = Vector2( 0, 25 )
layer_mask = 1
type_mask = 15

[connection signal="finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_finished"]


